--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'net.ltgt.apt' version '0.10'
 }
 
-group 'ru.levry'
+group 'com.github.levry.imq'
 version '0.0.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
