--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ version = '0.0.3'
 
 ext {
     imqVersion = '5.1'
-    slf4jVersion = '1.7.+'
+    slf4jVersion = '1.7.5'
     lombokVersion = '1.18.0'
     junitVersion = '5.4.0'
     assertjVersion = '3.10.0'
